--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "5.2.0"
+    "bootstrap": "^5.2"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^6.0.4",
