--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "^5.2"
+    "bootstrap": "^5.3.0-alpha3"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^8.1.1",
-    "ava": "^5.1.0",
-    "esbuild": "^0.16.10"
+    "@happy-dom/global-registrator": "^9.10.9",
+    "ava": "^5.2.0",
+    "esbuild": "^0.17.18"
   }
 }
