--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha3"
+    "bootstrap": "^5.3.0"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^9.10.9",
